--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "my-app",
+  "name": "kleros-contracting-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ethjs": "^0.3.3",
+    "ethjs-unit": "^0.1.6",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
